add roles statements

--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,12 @@ provider:
     PENDING_ORDER_QUEUE:
       Ref: PendingOrdersQueue
 
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "sqs:SendMessage"
+      Resource: "arn:aws:sqs:${self.provider.region}:*:PendingOrdersQueue"
+
 # se definen las funciones lambda
 
 functions:
