--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.918.0",
+    "g": "^2.0.1",
+    "serverless": "^2.46.0",
     "uuid": "^8.3.2"
   }
 }
